tests/fixtures/negative/empty-blocks/EmptyFunctionBlock.kt
package fixtures.negative.emptyblocks

fun doSomething() {
    println("hi")
}
